--- a/css/Main.css
+++ b/css/Main.css
@@ -1,108 +1,108 @@
-    body {
-        font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        background: #eeecee;
-    }
-    
-    * {
-        box-sizing: border-box;
-        /* margin: 0px 0px; */
-    }
-    
-    #sideMenu {
-        background: #140d32;
-        width: 250px;
-        position: relative;
-        /* top: 0;
+        body {
+            font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", "Helvetica Neue", Helvetica, Arial, sans-serif;
+            background: #eeecee;
+        }
+        
+        * {
+            box-sizing: border-box;
+            /* margin: 0px 0px; */
+        }
+        
+        #sideMenu {
+            background: #140d32;
+            width: 250px;
+            position: relative;
+            /* top: 0;
     bottom: 0;
     left: 0; */
-        /* box-shadow: 0px 4px 38.27px 4.73px rgba(0, 0, 0, 0.35); */
-        z-index: 1;
-        overflow-y: auto;
-        max-height: 100%;
-        margin-left: 10px;
-        padding: 15px 7px;
-    }
-    
-    #sideMenu nav {
-        padding-top: 30px;
-        width: 100%;
-        margin: 0;
-    }
-    
-    #sideMenu nav a {
-        display: block;
-        color: grey;
-        text-decoration: none;
-        padding: 15px 0;
-        width: 100%;
-        transition: all 0.3s ease-in-out;
-        position: relative;
-        margin: 0;
-    }
-    
-    #sideMenu nav a .fa {
-        color: #03a0e4;
-        font-size: 18px;
-        margin-right: 20px;
-        display: inline-block;
-        width: 20px;
-        position: relative;
-        top: 2px;
-        padding-left: 15px;
-    }
-    
-    #sideMenu nav a.active {
-        background: #131940;
-        border-left: 5px solid #03a0e4;
-        padding: 15px 35px 15px 30px;
-        color: white;
-    }
-    
-    #sideMenu nav a:hover {
-        background: #131940;
-        border-left: 5px solid #03a0e4;
-        /* padding: 15px 35px 15px 30px; */
-        color: white;
-    }
-    
-    #sideMenu nav a.active .fa {
-        color: white;
-        padding-right: 10px;
-    }
-    
-    #sideMenu nav ul li a:hover .fa {
-        color: white;
-    }
-    
-    header {
-        margin: 0 auto;
-        background: #140d32;
-        position: relative;
-        height: auto;
-        padding: 0 auto;
-    }
-    
-    .welcome {
-        font-size: 18px;
-        color: white;
-        display: inline-block;
-        padding: 15px;
-    }
-    
-    .user-area {
-        /* display: inline-block; */
-        float: right;
-        padding: 10px;
-    }
-    
-    .user-area a {
-        display: inline-block;
-        padding-right: 30px;
-        text-decoration: none;
-        color: white;
-        vertical-align: middle;
-    }
-    /* .user-area a .notification {
+            /* box-shadow: 0px 4px 38.27px 4.73px rgba(0, 0, 0, 0.35); */
+            z-index: 1;
+            overflow-y: auto;
+            max-height: 100%;
+            margin-left: 10px;
+            padding: 15px 7px;
+        }
+        
+        #sideMenu nav {
+            padding-top: 30px;
+            width: 100%;
+            margin: 0;
+        }
+        
+        #sideMenu nav a {
+            display: block;
+            color: grey;
+            text-decoration: none;
+            padding: 15px 0;
+            width: 100%;
+            transition: all 0.3s ease-in-out;
+            position: relative;
+            margin: 0;
+        }
+        
+        #sideMenu nav a .fa {
+            color: #03a0e4;
+            font-size: 18px;
+            margin-right: 20px;
+            display: inline-block;
+            width: 20px;
+            position: relative;
+            top: 2px;
+            padding-left: 15px;
+        }
+        
+        #sideMenu nav a.active {
+            background: #131940;
+            border-left: 5px solid #03a0e4;
+            padding: 15px 35px 15px 30px;
+            color: white;
+        }
+        
+        #sideMenu nav a:hover {
+            background: #131940;
+            border-left: 5px solid #03a0e4;
+            /* padding: 15px 35px 15px 30px; */
+            color: white;
+        }
+        
+        #sideMenu nav a.active .fa {
+            color: white;
+            padding-right: 10px;
+        }
+        
+        #sideMenu nav ul li a:hover .fa {
+            color: white;
+        }
+        
+        header {
+            margin: 0 auto;
+            background: #140d32;
+            position: relative;
+            height: auto;
+            padding: 0 auto;
+        }
+        
+        .welcome {
+            font-size: 18px;
+            color: white;
+            display: inline-block;
+            padding: 15px;
+        }
+        
+        .user-area {
+            /* display: inline-block; */
+            float: right;
+            padding: 10px;
+        }
+        
+        .user-area a {
+            display: inline-block;
+            padding-right: 30px;
+            text-decoration: none;
+            color: white;
+            vertical-align: middle;
+        }
+        /* .user-area a .notification {
     position: relative;
 }
 
@@ -119,182 +119,189 @@
     top: -1px;
     left: 5px;
 } */
-    
-    .user-area a .user-img {
-        background: url(../img/user1-256x256.png) no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        background-color: #eeecee;
-        width: 30px;
-        height: 30px;
-        display: inline-block;
-        border-radius: 50%;
-        margin-right: 10px;
-    }
-    
-    .fa-caret-down {
-        position: relative;
-        top: -8px;
-    }
-    
-    .search-area {
-        padding-top: 30px;
-        display: block;
-        padding-left: 10px;
-    }
-    
-    .search-area input {
-        height: 50px;
-        width: 230px;
-        background-color: #131940;
-        border-radius: 10px;
-        border: none;
-        color: #03a0e4;
-    }
-    
-    .search-area input::placeholder {
-        color: grey;
-        padding-left: 5px;
-        font-weight: 700px;
-    }
-    
-    #user-info {
-        display: inline-block;
-        /* margin-top: 10px; */
-    }
-    
-    #user-info p {
-        color: white;
-        display: inline-block;
-        margin-top: 30px;
-        margin-bottom: 0;
-        margin-left: 15px;
-        font-weight: 100;
-    }
-    
-    #user-info .user-image {
-        background: url(../img/user1-256x256.png) no-repeat center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        background-color: #eeecee;
-        width: 50px;
-        height: 50px;
-        float: left;
-        border-radius: 50%;
-        margin-top: 30px;
-        margin-left: 10px;
-    }
-    
-    #logo-area {
-        display: inline-block;
-        padding: 10px;
-    }
-    
-    #logo-area p {
-        font-size: 25px;
-        color: white;
-        padding-left: 10px;
-    }
-    
-    @media screen and (max-width: 992px) {
-        #logo-area {
-            display: block;
+        
+        .user-area a .user-img {
+            background: url(../img/user1-256x256.png) no-repeat center center;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+            background-color: #eeecee;
+            width: 30px;
+            height: 30px;
+            display: inline-block;
+            border-radius: 50%;
+            margin-right: 10px;
         }
-    }
-    /* .head-section {
+        
+        .fa-caret-down {
+            position: relative;
+            top: -8px;
+        }
+        
+        .search-area {
+            padding-top: 30px;
+            display: block;
+            padding-left: 10px;
+        }
+        
+        .search-area input {
+            height: 50px;
+            width: 230px;
+            background-color: #131940;
+            border-radius: 10px;
+            border: none;
+            color: #03a0e4;
+        }
+        
+        .search-area input::placeholder {
+            color: grey;
+            padding-left: 5px;
+            font-weight: 700px;
+        }
+        
+        #user-info {
+            display: inline-block;
+            /* margin-top: 10px; */
+        }
+        
+        #user-info p {
+            color: white;
+            display: inline-block;
+            margin-top: 30px;
+            margin-bottom: 0;
+            margin-left: 15px;
+            font-weight: 100;
+        }
+        
+        #user-info .user-image {
+            background: url(../img/user1-256x256.png) no-repeat center center;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+            background-color: #eeecee;
+            width: 50px;
+            height: 50px;
+            float: left;
+            border-radius: 50%;
+            margin-top: 30px;
+            margin-left: 10px;
+        }
+        
+        #logo-area {
+            display: inline-block;
+            padding: 10px;
+        }
+        
+        #logo-area p {
+            font-size: 25px;
+            color: white;
+            padding-left: 10px;
+        }
+        
+        @media screen and (max-width: 992px) {
+            #logo-area {
+                display: block;
+            }
+        }
+        /* .head-section {
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
     padding-right: 0px;
 } */
-    
-    .togglebtn {
-        background-color: #03a0e4;
-        color: white;
-        border: none;
-        height: 35px;
-        width: 35px;
-        margin-left: 20px;
-    }
-    
-    .login-container {
-        margin-top: 5%;
-    }
-    
-    .login-form-1 {
-        padding: 5%;
-        box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
-        background: url(../img/nigerian-student.jpg) no-repeat;
-        background-size: cover;
-    }
-    
-    .login-form-1 h1 {
-        text-align: left;
-        color: #333;
-        margin-top: 60%;
-        margin-left: 5%;
-        font-weight: 700;
-    }
-    
-    .login-form-1 p {
-        text-align: left;
-        color: #333;
-        margin-left: 5%;
-        font-size: 20px;
-    }
-    
-    .login-form-2 {
-        padding: 5%;
-        background-color: #131940;
-        box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
-    }
-    
-    .login-form-2 h3 {
-        text-align: center;
-        color: #fff;
-    }
-    
-    .login-container form {
-        padding: 10%;
-    }
-    
-    .btnSubmit {
-        width: 50%;
-        border-radius: 1rem;
-        padding: 1.5%;
-        border: none;
-        cursor: pointer;
-        height: 15%;
-    }
-    
-    .login-form-2 .btnSubmit {
-        margin-top: 20px;
-        font-weight: 600;
-        color: white;
-        background-color: #03a0e4;
-        ;
-    }
-    
-    .login-form-2 .ForgetPwd {
-        color: #fff;
-        font-weight: 600;
-        text-decoration: none;
-        float: right;
-    }
-    
-    .bg-overlay {
-        background: linear-gradient(rgba(19, 1, 39, 0.849), rgba(10, 1, 34, 0.774)), url("../img/college-students.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-    }
-    
-    @media only screen and (max-width: 768px) {
-        div.login-form-1 {
-            display: none;
+        
+        .togglebtn {
+            background-color: #03a0e4;
+            color: white;
+            border: none;
+            height: 35px;
+            width: 35px;
+            margin-left: 20px;
         }
-    }
+        
+        .login-container {
+            margin-top: 5%;
+        }
+        
+        .login-form-1 {
+            padding: 5%;
+            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+            background: url(../img/nigerian-student.jpg) no-repeat;
+            background-size: cover;
+        }
+        
+        .login-form-1 h1 {
+            text-align: left;
+            color: #333;
+            margin-top: 60%;
+            margin-left: 5%;
+            font-weight: 700;
+        }
+        
+        .login-form-1 p {
+            text-align: left;
+            color: #333;
+            margin-left: 5%;
+            font-size: 20px;
+        }
+        
+        .login-form-2 {
+            padding: 5%;
+            background-color: #131940;
+            box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+        }
+        
+        .login-form-2 h3 {
+            text-align: center;
+            color: #fff;
+        }
+        
+        .login-container form {
+            padding: 10%;
+        }
+        
+        .btnSubmit {
+            width: 50%;
+            border-radius: 1rem;
+            padding: 1.5%;
+            border: none;
+            cursor: pointer;
+            height: 15%;
+        }
+        
+        .login-form-2 .btnSubmit {
+            margin-top: 20px;
+            font-weight: 600;
+            color: white;
+            background-color: #03a0e4;
+            ;
+        }
+        
+        .login-form-2 .ForgetPwd {
+            color: #fff;
+            font-weight: 600;
+            text-decoration: none;
+            float: right;
+        }
+        
+        .bg-overlay {
+            background: linear-gradient(rgba(19, 1, 39, 0.849), rgba(10, 1, 34, 0.774)), url("../img/college-students.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+        
+        @media only screen and (max-width: 768px) {
+            div.login-form-1 {
+                display: none;
+            }
+        }
+        
+        .login-form-2 .img {
+            width: 80px;
+            margin-left: 142px;
+            margin-bottom: 20px;
+            border-radius: 50%;
+        }
