--- a/css/Main.css
+++ b/css/Main.css
@@ -223,6 +223,7 @@
         
         .login-container {
             margin-top: 5%;
+            height: 100%;
         }
         
         .login-form-1 {
@@ -290,8 +291,15 @@
         .bg-overlay {
             background: linear-gradient(rgba(19, 1, 39, 0.849), rgba(10, 1, 34, 0.774)), url("../img/college-students.jpg");
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: 100%;
             background-position: center center;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+            position: fixed;
+            width: 100%;
+            height: 100%;
         }
         
         @media only screen and (max-width: 768px) {
@@ -308,8 +316,14 @@
             margin-bottom: 15px;
             margin-top: 20px;
         }
-        /* @media only screen and (max-width: 768px) {
+        
+        @media (min-width: 768px) {
             .login-form-2 {
-                height: 500px;
+                height: 100%;
+                position: relative;
+                margin-bottom: auto;
             }
-        } */
+            .login-form-1 {
+                display: none;
+            }
+        }
