--- a/css/Main.css
+++ b/css/Main.css
@@ -318,5 +318,6 @@
             .login-form-2 {
                 margin-left: 5%;
                 margin-right: 5%;
+                margin-top: 10%;
             }
         }
